Update test results.

--- a/tests/wpt/metadata/XMLHttpRequest/open-url-javascript-window.htm.ini
+++ b/tests/wpt/metadata/XMLHttpRequest/open-url-javascript-window.htm.ini
@@ -1,3 +1,5 @@
 [open-url-javascript-window.htm]
   type: testharness
   expected: TIMEOUT
+  [XMLHttpRequest: open() - resolving URLs (javascript: ]
+    expected: TIMEOUT
